ecmascript/parser/tests/test262-error-references/fail/b996783239113de2.js.stderr
error: Expected ,, got ...
 --> $DIR/tests/test262-parser/fail/b996783239113de2.js:1:4
  |
1 | (a ...b) => 0
  |    ^^^

